Added our colors

--- a/themes/plainlanguage.yaml
+++ b/themes/plainlanguage.yaml
@@ -17,26 +17,26 @@
 #########
 colors:
   primary: 
-    main: '#005687' #Dark Blue
-    s1: '#e1f5fe'
-    s2: '#b3e5fc'
-    s3: '#4fc3f7'
-    s4: '#0288d1'
-    s5: '#186cb8'
+    main: '#023e73' #Darkish Blue
+    s1: '#ebf5ff'
+    s2: '#c3e2fe'
+    s3: '#86c6fd'
+    s4: '#4eb1d9'
+    s5: '#0d688c'
   secondary: 
-    main: '#f44336' #Dark Red
-    s1: '#ffdde0'
-    s2: '#ffcdd2'
-    s3: '#ef9a9a'
-    s4: '#d32f2f'
-    s5: '#b71c1c'
+    main: '#bf3030' #Wine Red
+    s1: '#f7dede'
+    s2: '#dec7c7'
+    s3: '#ce3b3b'
+    s4: '#932525'
+    s5: '#521414'
   accent1:
-    main: '#f1b211' #Golden rod yellow
-    s1: '#f9f1dc'
-    s2: '#f4dea7'
-    s3: '#f2cb69'
-    s4: '#f0bb34'
-    s5: '#e4a80b'
+    main: '#e9ba0e' #Saffron
+    s1: '#fbebb2'
+    s2: '#f8dc77'
+    s3: '#f6d251'
+    s4: '#c29a0a'
+    s5: '#886c07'
   neutrals: # No need to change neutrals
     s1: '#f2f2f2'
     s2: '#e8e9e9'
