Eliminated Title Numbering Factor

--- a/themes/plainlanguage.yaml
+++ b/themes/plainlanguage.yaml
@@ -109,7 +109,7 @@ style:
     letter-spacing: 0.5pt
     color: $colors-primary-main
     # Add numbering in toc, headers, footers, when applicable
-    title-numbering: true
+    title-numbering: false
     break-before: page
   h2:
     font-family: $fonts-families-headings
@@ -117,7 +117,7 @@ style:
     border-after: solid 1pt $colors-primary-s1
     color: $colors-primary-main
     # Add numbering in toc, headers, footers, when applicable
-    title-numbering: true
+    title-numbering: flase
   h3:
     font-family: $fonts-families-headings
     font-size: $fonts-sizing-h3
